force-app/main/default/objects/Guia_Remision__c/Guia_Remision__c.object-meta.xml
<CustomObject>
    <label>Guía de Remisión</label>
    <nameField>
        <label>Guía de Remisión</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guías de Remisión</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>