force-app/main/default/objects/Guia_Remision__c/fields/Depositado__c.field-meta.xml
<CustomField>
    <fullName>Depositado__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Depositado</label>
    <type>Checkbox</type>
</CustomField>