force-app/main/default/objects/Guia_Remision__c/fields/Factura_Electronica__c.field-meta.xml
<CustomField>
    <fullName>Factura_Electronica__c</fullName>
    <label>Factura Electrónica</label>
    <length>127</length>
    <type>Text</type>
</CustomField>