force-app/main/default/objects/Guia_Remision__c/fields/Fecha_Deposito__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Deposito__c</fullName>
    <label>Fecha de Depósito</label>
    <type>Date</type>
</CustomField>