force-app/main/default/objects/Guia_Remision__c/fields/Fecha_Guia__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Guia__c</fullName>
    <label>Fecha de Guía</label>
    <type>Date</type>
</CustomField>