force-app/main/default/objects/Guia_Remision__c/fields/Fecha_Guia_Mes__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Guia_Mes__c</fullName>
    <formula>CASE(MONTH(Fecha_Guia__c), 
1, &quot;01-Enero&quot;, 
2, &quot;02-Febrero&quot;,
3, &quot;03-Marzo&quot;, 
4, &quot;04-Abril&quot;,
5, &quot;05-Mayo&quot;, 
6, &quot;06-Junio&quot;,
7, &quot;07-Julio&quot;, 
8, &quot;08-Agosto&quot;,
9, &quot;09-Setiembre&quot;, 
10, &quot;10-Octubre&quot;,
11, &quot;11-Noviembre&quot;,
&quot;12-Diciembre&quot;)</formula>
    <label>Fecha Guía - Mes</label>
    <type>Text</type>
</CustomField>