force-app/main/default/objects/Guia_Remision__c/fields/Importe_Depositado__c.field-meta.xml
<CustomField>
    <fullName>Importe_Depositado__c</fullName>
    <label>Importe Depositado</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>