force-app/main/default/objects/Guia_Remision__c/fields/Importe_Depositar__c.field-meta.xml
<CustomField>
    <fullName>Importe_Depositar__c</fullName>
    <formula>0.985 * Importe_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe a Depositar</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>