force-app/main/default/objects/Guia_Remision__c/fields/Importe_Total__c.field-meta.xml
<CustomField>
    <fullName>Importe_Total__c</fullName>
    <formula>Peso_a_Facturar__c * Precio_Unitario__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Importe Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>