force-app/main/default/objects/Guia_Remision__c/fields/Merma__c.field-meta.xml
<CustomField>
    <fullName>Merma__c</fullName>
    <formula>Peso_Guia__c - Peso_a_Facturar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merma</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>