force-app/main/default/objects/Guia_Remision__c/fields/Peso_a_Facturar__c.field-meta.xml
<CustomField>
    <fullName>Peso_a_Facturar__c</fullName>
    <label>Peso a Facturar</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>