force-app/main/default/objects/Guia_Remision__c/fields/Peso_Guia__c.field-meta.xml
<CustomField>
    <fullName>Peso_Guia__c</fullName>
    <description>Peso en kilogramos</description>
    <inlineHelpText>Peso en kilogramos</inlineHelpText>
    <label>Peso de Guía</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>