force-app/main/default/objects/Guia_Remision__c/fields/Precio_Unitario__c.field-meta.xml
<CustomField>
    <fullName>Precio_Unitario__c</fullName>
    <inlineHelpText>Precio por kilogramo</inlineHelpText>
    <label>Precio Unitario</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>