force-app/main/default/objects/Guia_Remision__c/fields/Retencion_SUNAT__c.field-meta.xml
<CustomField>
    <fullName>Retencion_SUNAT__c</fullName>
    <formula>Importe_Total__c - Importe_Depositar__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Retención SUNAT</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>