force-app/main/default/objects/Guia_Remision__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Fecha_Guia__c</columns>
    <columns>Peso_Guia__c</columns>
    <columns>Depositado__c</columns>
    <columns>Fecha_Deposito__c</columns>
    <columns>Importe_Depositado__c</columns>
    <columns>Peso_a_Facturar__c</columns>
    <columns>Importe_Total__c</columns>
    <columns>Importe_Depositar__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>